--- a/menu.html
+++ b/menu.html
@@ -41,6 +41,7 @@
     <p>&copy; 2025 Kedai Mama Eni</p>
   </footer>
 
+  <script src="data.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
